WIP changed App.js function to a class and added state

--- a/instaclone/src/components/SearchBar/searchSection.scss
+++ b/instaclone/src/components/SearchBar/searchSection.scss
@@ -1,7 +1,19 @@
 .search-bar-container{
-    background:red;
+    background:white;
     display:flex;
     justify-content: space-around;
     align-items:center;
     box-sizing: border-box;
+
+    .search-logo{
+        display:flex;
+        align-items: center;
+        .icon{
+            width:25px;
+        }
+
+        .iconimg{
+            width:50px;
+        }
+    }
 }
