--- a/instaclone/src/components/PostSection/postSection.scss
+++ b/instaclone/src/components/PostSection/postSection.scss
@@ -1,5 +1,7 @@
 .post-container{
-
+    background:white;
+    margin-bottom:.7em;
+    padding-bottom:.5em;
     .post-header{
         display:flex;
         align-items: center;
@@ -26,6 +28,10 @@
         display:flex;
         flex-direction: column;
         padding:.3em 1em;
+
+        .stat-icon{
+            margin-left:10px;
+        }
     }
 }
 
